--- a/vignettes/Chapter8Solutions.Rmd
+++ b/vignettes/Chapter8Solutions.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Chapter 8 - Wiggly Models - Exercise solutions and Code Boxes"
+title: "Chapter 8 -- Wiggly Models -- Exercise solutions and Code Boxes"
 author: "David Warton"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Chapter 8 - Wiggly Models - Exercise solutions and Code Boxes}
+  %\VignetteIndexEntry{Chapter 8 -- Wiggly Models -- Exercise solutions and Code Boxes}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
