--- a/vignettes/Chapter9Solutions.Rmd
+++ b/vignettes/Chapter9Solutions.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Chapter 9 - Design-based inference - Exercise solutions and Code Boxes"
+title: "Chapter 9 -- Design-based inference -- Exercise solutions and Code Boxes"
 author: "David Warton"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Chapter 9 - Design-based inference - Exercise solutions and Code Boxes}
+  %\VignetteIndexEntry{Chapter 9 -- Design-based inference -- Exercise solutions and Code Boxes}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
